@@ -4,6 +4,7 @@ critical areas
 areas to investigate impact
     lnc kernel driver is gone from 8.1 etc
 	DHCP relay cannot start when DHCP server is running (even on different interfaces)
-	
+	javascript around RA's is broken (when RA is not enabled, other options should be disabled)
+	default ipv6 route still not being configured for wan ipv6=dhcp
 areas to improve
 	scripts to reverse the build scripts so you can do a clean build
