@@ -2,6 +2,8 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- change dhcp-pd to be /64 by default
+
 - fixup go.sh to find svn (again) and stage 2 to use tmp for php and minihttpd
   and stage 5 mfsroot for iso filename change
 
